# revit-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  auth.py  config.py  pyproject.toml  revit_client.py  server.py
docs/: SECURITY.md  conduit_workflow.md
docs/examples/: prompt_templates.md
pyrevit_extension/: startup.py
pyrevit_extension/routes/: analysis_routes.py  conduit_routes.py  element_routes.py  family_routes.py  level_routes.py  material_routes.py  mep_routes.py  parameter_routes.py  project_routes.py  room_routes.py  sheet_routes.py  view_routes.py  workset_routes.py
tests/: mock_revit_server.py  test_auth.py  test_revit_client.py
tools/: __init__.py  analysis.py  conduit.py  elements.py  families.py  levels.py  materials.py  mep.py  parameters.py  project.py  rooms.py  sheets.py  types.py  views.py  worksets.py
