[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revit-mcp-server"
version = "1.0.0"
description = "A robust Model Context Protocol (MCP) server for Autodesk Revit with 80+ tools covering elements, parameters, families, views, sheets, worksets, MEP, rooms, materials, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "jacksonpinto", email = "jackson.pinto@wwt.com" }
]
keywords = ["revit", "bim", "mcp", "autodesk", "pyrevit", "ai", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyJWT>=2.8.0",
  "cryptography>=42.0.0",
  "structlog>=24.0.0",
  "anyio>=4.0.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
revit-mcp-server = "server:main"

[project.urls]
Homepage = "https://github.com/jacksonpinto/revit-mcp-server"
Repository = "https://github.com/jacksonpinto/revit-mcp-server"
Issues = "https://github.com/jacksonpinto/revit-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
